Remove unnecessary files, add credits, fix for small height window overflow

--- a/static/style.css
+++ b/static/style.css
@@ -10,15 +10,6 @@ body {
     height: 100vh;
 }
 
-header {
-    background-color: #404040;
-    padding: 10px;
-    text-decoration: none;
-    position: fixed;
-    width: 100%;
-    z-index: 1;
-}
-
 h1 {
     font-family: 'Comfortaa', cursive;
     font-size: 2.0em;
@@ -37,30 +28,25 @@ h2 {
 
 h4 {
     font-family: 'Comfortaa', cursive;
-    font-size: 1em;
+    font-size: 0.7em;
     font-weight: lighter;
     color: #FFFFFF;
     text-align: center;
 }
 
 p {
+    cursor: pointer;
     font-family: 'Comfortaa', cursive;
     font-size: 0.9em;
     margin-top: 7px;
     margin-bottom: 7px;
+    text-decoration: underline;
 }
 
 span {
 	font-size:0.9em;
 	font-weight: lighter;
 	color: #FFFFFF;
-}
-
-input[type=text] {
-    width: 270px;
-    height: 26px;
-    padding-left: 10px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .container {
@@ -71,7 +57,7 @@ input[type=text] {
 .map {
 	flex-basis: 500px;
 	flex-grow: 1;
-	flex-shrink: 2
+	flex-shrink: 2;
     background-color: #FFFFFF;
     width: 100%;
     height: 100vh;
@@ -83,8 +69,7 @@ input[type=text] {
 	flex-grow: 0;
 	flex-shrink: 1;
     background: #404040;
-    height: 100%;
-    margin: 0 auto;
+    overflow-y: scroll;
 }
 
 .boxContainer {
@@ -134,79 +119,7 @@ input[type=text] {
 	font-size: 0.9em;
 	color: #FFFFFF;
 	border-radius: 5px;
-	min-height: 7vh;
+	min-height: 70px;
 	min-width: 50%;
-}
-
-.header-container {
-    display: flex;
-    align-items: center;
-}
-
-.hamburger {
-    cursor: pointer;
-    display: inline-block;
-    height: 24px;
-    padding: 3px 4px 3px;
-    position: relative;
-    width: 25px;
-    background: #404040;
-}
-
-.hamburger-stripe {
-    background-color: #FFFFFF;
-    border: 1px solid #eee;
-    border-radius: 2px 2px 2px 2px;
-    height: 2px;
-    margin-top: 3px;
-    width: 90%;
-}
-
-.title {
-    box-sizing: border-box;
-    margin-left: 18px;
-}
-
-.filter-title {
-    margin-left: 20px;
-    margin-top: 32px;
-}
-
-.filter-container {
-    width: 100%;
-    margin-left: 15px;
-    margin-right: 20px;
-    margin-bottom: 20px;
-}
-
-.filter-textbox {
-    border: 2px solid #FFFFFF;
-    border-radius: 4px;
-}
-
-.filter-submit {
-    border: 2px solid #FFFFFF;
-    border-radius: 4px;
-    color: white;
-    cursor: pointer;
-}
-
-.item-container {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-}
-
-.item {
-    box-sizing: border-box;
-    padding-top: 15px;
-    padding-bottom: 15px;
-    padding-left: 25px;
-    color: #CCCCCC;
-}
-
-.item:hover {
-    background-color: gray;
-    cursor: pointer;
-    color: #FFFFFF;
+    margin-bottom: 1vh;
 }
